--- a/package.json
+++ b/package.json
@@ -83,12 +83,13 @@
     "@angular/router": "~4.1.2",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
-    "@ngx-translate/core": "^7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
-    "font-awesome": "^4.7.0",
+    "@ngx-translate/core": "^7.1.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "ng2-table": "^1.3.2",
     "reflect-metadata": "^0.1.10",
     "rxjs": "~5.0.2",
     "zone.js": "0.8.5"
